Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -206,7 +206,7 @@ footer.bk-footerp {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 740px;
+  width: 80%;
 }
 
 .widget.extendednavigation a.pull {
@@ -214,7 +214,6 @@ footer.bk-footerp {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0px;
   padding: 0px;
 }
